--- a/pages/events/index.css
+++ b/pages/events/index.css
@@ -8,15 +8,27 @@
 
 .events__list {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(282px, 1fr));
-    grid-gap: 16px;
+    grid-template-columns: 1fr;
+    grid-gap: 24px;
 
     margin: 24px 0;
     padding: 0;
 }
 
+@media (min-width: 620px) {
+    .events__list {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 926px) {
+    .events__list {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
 @media (min-width: 1232px) {
     .events__list {
-        grid-gap: 24px;
+        grid-template-columns: repeat(4, 1fr);
     }
 }
